    \itemize{
      \item Improve efficiency and stability of ARMA models.
      \item Throw an error when the intercept is removed 
      in an ordinal model instead of silently adding
      it back again.
      \item Deprecate argument \code{threshold} in \code{brm}
      and instead recommend passing \code{threshold} directly 
      to the ordinal family functions.
      \item Change the default value of the \code{autocor}
      slot in \code{brmsfit} objects to an empty
      \code{cor_brms} object.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Fix problems in \code{pp_check}
      when the variable specified in argument
      \code{x} has attributes thanks to 
      Paul Galpern.
      \item Fix problems when computing fitted 
      values for truncated discrete models based
      on new data thanks to Nathan Doogan.
      \item Fix unexpected errors when passing
      models, which did not properly initiliaze,
      to various post-processing methods.
      \item Do not accidently drop the second 
      dimension of matrices in \code{summary.brmsfit} 
      for models with only a single observation. 
    }
  }
}

\section{CHANGES IN VERSION 1.7.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Fit latent Gaussian processes of one
      or more covariates via function \code{gp} 
      specified in the model formula (#221).
      \item Rework methods \code{fixef}, \code{ranef},
      \code{coef}, and \code{VarCorr} to be more flexible 
      and consistent with other post-processing methods (#200).
      \item Generalize method \code{hypothesis} to be
      applicable on all objects coercible to a 
      \code{data.frame} (#198).
      \item Visualize predictions via spaghetti 
      plots using argument \code{spaghetti} in
      \code{marginal_effects} and \code{marginal_smooths}.
      \item Introduce method \code{add_ic} to
      store and reuse information criteria in 
      fitted model objects (#220).